--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
   <main class="container-fluid">
       <div class="row" id="countrieslist">
-        <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4  color">
+        <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4">
           <p><img src="png" alt="nazev" srcset=""></p>
           <h5><a href="googlemap"></a></h5>  
         </div>
